--- a/.github/workflows/djangoworkflow.yml
+++ b/.github/workflows/djangoworkflow.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Run Tests
 
       run: |
+        cd api
         export SECRET_KEY=${{ secrets.SUPER_VALUE }}
         pipenv run coverage run --omit=*/venv/*,*/migrations/* manage.py test
         pipenv run coverage report
