--- a/.github/workflows/djangoworkflow.yml
+++ b/.github/workflows/djangoworkflow.yml
@@ -35,4 +35,4 @@ jobs:
         export SECRET_KEY=${{ secrets.SUPER_VALUE }}
         pipenv run coverage run --omit=*/venv/*,*/migrations/* manage.py test
         pipenv run coverage report
-        coverage-badge -o ../coverage.svg
+        pipenv run coverage-badge -o ../coverage.svg
