Added token based authentication in prep for the Vue app. Also consolidated the svgs into a folder to clear up the root directory.

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ djangorestframework = "*"
 python-decouple = "*"
 coverage = "*"
 coverage-badge = "*"
+djoser = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
