--- a/.github/workflows/djangoworkflow.yml
+++ b/.github/workflows/djangoworkflow.yml
@@ -36,4 +36,4 @@ jobs:
         pipenv run coverage run --omit=*/venv/*,*/migrations/* manage.py test
         pipenv run coverage report
         rm -rf ../coverage.svg
-        pipenv run coverage-badge -o ../coverage.svg
+        pipenv run coverage-badge -o ../svg/coverage.svg
